Update logo style

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -26,7 +26,7 @@ a:link,a:visited,a:active{
   width: 100%;
   max-width: rem($maxWidthSize);
   margin: 0 auto;
-  padding: rem(10);
+  padding: rem(15) rem(5) rem(10);
 
   .item_logo{
     display: flex;
@@ -34,7 +34,7 @@ a:link,a:visited,a:active{
 
     img {
       width: 20%;
-      max-width: 100px;
+      max-width: 140px;
     }
   }
 }
